brat/test/golden/error/vecpat3.brat.golden
Error in test/golden/error/vecpat3.brat@FC {start = Pos {line = 3, col = 6}, end = Pos {line = 3, col = 11}}:
fst3([a,b]) = none
     ^^^^^

  Unification error: Couldn't force 1 to be 0

